# Juneuary

./: .gitignore  AGENTS.md  PROJECT_PLAN.md  README.md  pyproject.toml
.skills/: _harness  _index.md  _meta.yml
.skills-harness/: .gitignore  AGENTS_skills.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE
.skills-harness/.skills/: _meta.yml
.skills-harness/.skills/_harness/: CLAUDE_template.md  CODEX_template.md  CURSOR_template.md  GEMINI_template.md  GENERIC_template.md  OPENCODE_template.md  ROO_template.md  _rules.md  migrate-to-subtree.sh  sync.sh
.skills/_harness/: CLINE_template.md  COPILOT_template.md  WINDSURF_template.md  build-index.sh  check.sh  link.sh
.skills/_skills/: harness-subtree  harness-upgrade  kit-release  skill-author  skill-template
.skills/_skills/harness-upgrade/: SKILL.md
.skills/_skills/j-narrative-report/: SKILL.md
.skills/_skills/j-report-review/: SKILL.md
.skills/_skills/j-weather-sync/: SKILL.md
contract/: example_state.json  state.schema.json
data/: cities.local.example.yaml  cities.yaml  microseasons.yaml  precipitation.yaml  presentation.yaml  series.yaml
data/cities/: san_francisco.yaml  seattle.narrative.yaml  seattle.yaml
db/: schema.sql
reports/: seattle_2026_ytd.md  seattle_2026_ytd_narrative.md
scripts/: build_db.py  classify.py  fetch_weather.py  query.py  report.py  serve.py  solar.py  state.py
src/juneuary/: __init__.py  locate.py  predict.py  presentation.py  serve.py  state.py
tests/: test_locate.py  test_predict.py  test_report.py  test_serve.py  test_state.py
(+5 files in other folders)
