[project]
name = "juneuary"
version = "0.1.0"
description = "Codified microseasons for Seattle (and, eventually, other cities)."
requires-python = ">=3.12,<3.13"
dependencies = [
    "pyyaml>=6.0.2",
]

[dependency-groups]
dev = [
    "rich>=13.9.4",
    "pytest>=8.3.0",
]

[tool.pytest.ini_options]
pythonpath = ["scripts", "src"]
testpaths  = ["tests"]

[tool.uv]
package = false
